--- a/style.css
+++ b/style.css
@@ -33,8 +33,8 @@ html{
   
   .menu-principal a {
   color: var(--cor-secundaria);
-  font-family: Sofia;
-  font-size: 120%;
+  font-family: cursive;
+  font-size: 100%;
   padding: 0 20px;
   }
   
@@ -43,20 +43,19 @@ html{
     font-size: 130%;
   }
   
-  
   /*Estilos do conteúdo*/
   
   .titulo-principal{
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family:cursive;
     text-transform: bold;
     text-align: center;
-    font-size: 30pt;
+    font-size: 70pt;
   }
   
   .subtitulo-principal{
     font-family: Impact, Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     text-align: center;
-    font-size: 20pt;
+    font-size: 50pt;
     text-decoration: underline;
   }
   
@@ -65,9 +64,7 @@ html{
     text-align: left;
     text-decoration:underline;
     font-size: 20pt;
-    padding-bottom: 10px;
-    text-shadow:2px 2px #E25E3E;
-  }
+}
   
   p {
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -111,8 +108,6 @@ html{
   margin: 10px 1px 0 10px;
   }
   
-  
-  
   .container2 {
     width: 500px;
     height: 250px;
@@ -134,7 +129,6 @@ html{
   border-radius: 5px;
   box-shadow: 10px 10px #da8c7b;
   }
-  
   
   .container4 {
   width: 500px;
@@ -168,7 +162,6 @@ html{
     box-shadow: 10px 10px #da8c7b;
   }
   
-  
   .container7 {
   width: 300px;
   height: 250px;
@@ -180,7 +173,6 @@ html{
   align-content: space-evenly;
   box-shadow: 10px 10px #da8c7b;
   }
-  
   
   .container8 {
   width: 300px;
@@ -277,9 +269,8 @@ html{
   
   .container16 {
   width: 300px;
-  height: 250px;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-content: space-evenly;
   border-radius: 5px;
   gap: 20px;
@@ -373,7 +364,8 @@ html{
   align-content: space-evenly;
   border-radius: 5px;
   box-shadow: 10px 10px #da8c7b;
-  }      
+  }  
+
   .tooltip {
     position: relative;
     display: inline-block;
@@ -388,8 +380,6 @@ html{
     text-align: center;
     border-radius: 6px;
     padding: 5px 0;
-  
-    /* Position the tooltip */
     position: absolute;
     z-index: 1;
   }
@@ -397,3 +387,29 @@ html{
   .tooltip:hover .tooltiptext {
     visibility: visible;
   }
+
+.titulo-de-artigo:hover {
+  width: 700px;
+  height: 100px;
+  font-family: var(--fonte-primária);
+  font-size: 35pt;
+  transition: width 3s, height 5s;
+}
+
+.button {
+  background-color: var(--cor-fundo); /* Green */
+  border: none;
+  color: black;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  -webkit-transition-duration: 0.4s; /* Safari */
+  transition-duration: 0.4s;
+}
+
+.button:hover {
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+}
